# BAaP

LabWork_1/Task_1/: car.cpp  movingrectangle.cpp
LabWork_1/Task_2/: canvas.cpp  circle.cpp  circle.h  ellipse.cpp  ellipse.h  hexagon.cpp  mainwindow.cpp  polygon.cpp  polygon.h  rectangle.cpp  rectangle.h  rhomb.cpp  rhomb.h  shape.h  square.cpp  square.h  stars.cpp  triangle.cpp  triangle.h
LabWork_2/Task_1/: date.cpp  date.h  dates.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
LabWork_2/Task_2/: Students.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  student.cpp  student.h
LabWork_2/Task_3-4/: BinaryOperation.cpp  BinaryOperation.h  CMakeLists.txt  Expression.h  Number.cpp  Number.h  main.cpp
LabWork_3/Task_1-3/: Task_1-3.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  task_1.cpp  task_1.h  task_2.cpp  task_2.h  task_3.cpp  task_3.h
LabWork_3/Task_4/: Task_4.pro  hanoimover.cpp  hanoimover.h  hanoisolver.cpp  hanoisolver.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
LabWork_3/Task_5/: mainwindow.cpp  mainwindow.h
LabWork_4/Task_1/: CMakeLists.txt  HeapSort.cpp  HeapSort.h  MergeSort.cpp  MergeSort.h  QuickSort.cpp  QuickSort.h  main.cpp
LabWork_4/Task_2/: CMakeLists.txt  main.cpp
LabWork_4/Task_3/: CMakeLists.txt  main.cpp
LabWork_4/Tasks_4-5/: Iterator.h  ReverseIterator.h  Tasks_4-5.pro  Vector.h  mainwindow.cpp  mainwindow.h  pair.h
LabWork_5/Task_1/: Task_1.pro  data.txt  keyboard.cpp  keyboard.h  languagemanager.cpp  languagemanager.h  mainwindow.cpp  mainwindow.h  textdisplay.h  (+1 more)
LabWork_5/Task_2/: CMakeLists.txt  main.cpp
(+61 files in other folders)
